@@ -371,7 +371,12 @@ static void BGM_Play_noext (const char *filename, unsigned int allowed_types)
 		case BGM_MIDIDRV:
 			if (BGM_Play_mididrv(tmp) == 0)
 				return;		/* success */
-			break;
+			/* BGM_MIDIDRV is followed by CODECTYPE_MID streamer.
+			 * Even if the midi driver failed, we may still have
+			 * a chance with the streamer if it's available... */
+			handler = handler->next;
+			if (! (handler && handler->is_available))
+				break;
 		case BGM_STREAMER:
 			bgmstream = S_CodecOpenStreamType(tmp, handler->type);
 			if (bgmstream)
@@ -434,7 +439,8 @@ void BGM_Play (const char *filename)
 		/* BGM_MIDIDRV is followed by CODECTYPE_MID streamer.
 		 * Even if the midi driver failed, we may still have
 		 * a chance with the streamer if it's available... */
-		if (! (handler->next && handler->next->is_available))
+		handler = handler->next;
+		if (! (handler && handler->is_available))
 			break;
 	case BGM_STREAMER:
 		bgmstream = S_CodecOpenStreamType(tmp, handler->type);
@@ -535,7 +541,12 @@ void BGM_PlayMIDIorMusic (const char *filename)
 		case BGM_MIDIDRV:
 			if (BGM_Play_mididrv(tmp) == 0)
 				return;		/* success */
-			break;
+			/* BGM_MIDIDRV is followed by CODECTYPE_MID streamer.
+			 * Even if the midi driver failed, we may still have
+			 * a chance with the streamer if it's available... */
+			handler = handler->next;
+			if (! (handler && handler->is_available))
+				break;
 		case BGM_STREAMER:
 			bgmstream = S_CodecOpenStreamType(tmp, handler->type);
 			if (bgmstream)
